@@ -1,0 +1,4 @@
+function y = test_skip_only_one()
+% A file with just one skipped test:
+% >> a = 5  % doctest: +SKIP
+% b = 7
